# AmbiTap-Pd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  style.yml
abstractions/: ambitap.ui-remote.pd
booklet/: 01-first-sounds.pd
help/: ambitap.bed2hoa~-help.pd  ambitap.binaural~-help.pd  ambitap.compress~-help.pd  ambitap.decode~-help.pd  ambitap.directional~-help.pd  ambitap.distance~-help.pd  ambitap.doppler~-help.pd  ambitap.encode~-help.pd  ambitap.energyvec~-help.pd  ambitap.format~-help.pd  ambitap.mirror~-help.pd  ambitap.panbin~-help.pd  ambitap.room~-help.pd  ambitap.rotate~-help.pd  ambitap.ui-remote-help.pd  ambitap.vmic~-help.pd  ambitap.xtc~-help.pd  gen_help.py
src/: ambitap.bed2hoa~.cpp  ambitap.binaural~.cpp  ambitap.compress~.cpp  ambitap.decode~.cpp  ambitap.directional~.cpp  ambitap.distance~.cpp  ambitap.doppler~.cpp  ambitap.encode~.cpp  ambitap.energyvec~.cpp  ambitap.format~.cpp  ambitap.mirror~.cpp  ambitap.panbin~.cpp  ambitap.room~.cpp  ambitap.rotate~.cpp  ambitap.vmic~.cpp  ambitap.xtc~.cpp  ambitap_pd.h  ambitap_setup.cpp
tests/: load_smoke.sh  osc_remote.pd  osc_remote_test.sh  smoke.pd
